--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar is-light">
-        <div class="navbar-brand">
-            <h1 class="navbar-item title is-1 has-text-centered">one billion seconds</h1>
-        </div>
+    <nav class="section">
+        <h1 class="title is-1">one billion seconds</h1>
     </nav>
     <div class="section">
         {{ content | safe }}
