--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -7,6 +7,15 @@
     <!-- Grab title from the page data and dump it here -->
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8FY6QYCET8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-8FY6QYCET8');
+    </script>
 </head>
 <body>
     <nav class="section">
